--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="app_name">Data Entry Admin</string>
+    <string name="app_name">Data Entry User</string>
     <string name="powered_by">Powered by</string>
     <string name="developer_depository">Xonic It Foundation</string>
     <!-- OnBoarding Screen Strings -->
